--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,15 @@ Thumbs.db
 *.safetensors
 model_*.pth
 checkpoint_*.ckpt
+
+# Auto-added by publisher
+# Training artifacts (auto-added by publisher)
+*.onnx
+mlflow.db
+data/*.arrow
+data/*.parquet
+data/*.h5
+data/*.hdf5
+data/raw/
+data/processed/
+.venv/
